--- a/index.html
+++ b/index.html
@@ -291,11 +291,11 @@
       </div>
     </div>
     <!-- <div id="serch" class="serch-teb container">
-      <div class="serch-demo">
-          <input type="search" placeholder="Type Word Hit The Enter ">
-         <i class="fa-solid fa-magnifying-glass fa-2x"></i>
-      </div> 
-    </div> -->
+        <div class="serch-demo">
+            <input type="search" placeholder="Type Word Hit The Enter ">
+          <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+        </div> 
+      </div> -->
     <div class="secand container">
       <div class="secand-1">
         <div class="secand-1-top">
@@ -1298,23 +1298,22 @@
         </div>
       </div>
     </div>
-    <div class="faq-section ">
+    <div class="faq-section">
       <div class="faq-center container">
         <div class="center-row-1">
           <img src="./img/faq.webp" alt="" />
           <div class="center-row-laft">
             <div class="center-row-ph">
-              <span class="center-row-text">Get Started <br>Free Call?</span>
-              <h2>13K</h2>
-              <p>
-                Decades of Experience,<br />
-                Endless Innovation
-              </p>
+              <span class="center-row-text">Get Started <br />Free Call?</span>
+              <i class="fa-solid fa-phone-volume fa-4x"></i>
+              <p>1-888-452-1505</p>
             </div>
           </div>
           <div class="title-hedar-of">
             <h3>
-              Need Help? Start </br>Here...
+              Need Help? Start
+              <br />
+              Here...
             </h3>
           </div>
         </div>
@@ -1401,6 +1400,256 @@
         </div>
       </div>
     </div>
+
+    <div class="blur-map container">
+      <div class="blur-map-main">
+        <div class="blur-map-text">
+          <img src="./img/map.svg" alt="Map" />
+
+          <div class="location-indicator loc-1">
+            <div class="location-tooltip">
+              <span>Head Office:</span>
+              <p>993 Renner Burg, West Rond, MT 94251-030, USA.</p>
+              <a href="tel:10095447818">P: +1 (009) 544-7818</a>
+              <a href="mailto:support@bexon.com">M: support@bexon.com</a>
+            </div>
+          </div>
+
+          <div class="location-indicator loc-2">
+            <div class="location-tooltip">
+              <span>Branch Office:</span>
+              <p>123 Bay Area, Techno Park, CA 94110, USA.</p>
+              <a href="tel:10095447819">P: +1 (009) 544-7819</a>
+              <a href="mailto:branch@bexon.com">M: branch@bexon.com</a>
+            </div>
+          </div>
+
+          <div class="location-indicator loc-3">
+            <div class="location-tooltip">
+              <span>Support Center:</span>
+              <p>789 Ocean Drive, Miami, FL 33139, USA.</p>
+              <a href="tel:10095447820">P: +1 (009) 544-7820</a>
+              <a href="mailto:support@bexon.com">M: support@bexon.com</a>
+            </div>
+          </div>
+        </div>
+        <div class="contact-form-section">
+          <div class="contact-form-container wow fadeInUp" data-wow-delay=".4s">
+            <div class="section-heading">
+              <span class="section-subtitle">
+                <svg
+                  class="wining-section-svg"
+                  width="64px"
+                  height="64px"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path
+                      d="M20.2083 7.82141L12.5083 12.2814C12.1983 12.4614 11.8083 12.4614 11.4883 12.2814L3.78826 7.82141C3.23826 7.50141 3.09826 6.75141 3.51826 6.28141C3.80826 5.95141 4.13826 5.68141 4.48826 5.49141L9.90826 2.49141C11.0683 1.84141 12.9483 1.84141 14.1083 2.49141L19.5283 5.49141C19.8783 5.68141 20.2083 5.96141 20.4983 6.28141C20.8983 6.75141 20.7583 7.50141 20.2083 7.82141Z"
+                      fill="currentColor"
+                    ></path>
+                    <path
+                      d="M11.4305 14.1389V20.9589C11.4305 21.7189 10.6605 22.2189 9.98047 21.8889C7.92047 20.8789 4.45047 18.9889 4.45047 18.9889C3.23047 18.2989 2.23047 16.5589 2.23047 15.1289V9.9689C2.23047 9.1789 3.06047 8.6789 3.74047 9.0689L10.9305 13.2389C11.2305 13.4289 11.4305 13.7689 11.4305 14.1389Z"
+                      fill="currentColor"
+                    ></path>
+                    <path
+                      d="M12.5703 14.1389V20.9589C12.5703 21.7189 13.3403 22.2189 14.0203 21.8889C16.0803 20.8789 19.5503 18.9889 19.5503 18.9889C20.7703 18.2989 21.7703 16.5589 21.7703 15.1289V9.9689C21.7703 9.1789 20.9403 8.6789 20.2603 9.0689L13.0703 13.2389C12.7703 13.4289 12.5703 13.7689 12.5703 14.1389Z"
+                      fill="currentColor"
+                    ></path>
+                  </g>
+                </svg>
+                Get in Touch
+              </span>
+              <h2 class="section-title">Drop Us a <span>Line.</span></h2>
+            </div>
+
+            <form id="contact-form">
+              <div class="form-row">
+                <div class="form-col">
+                  <div class="input-group">
+                    <input
+                      type="text"
+                      name="cfName"
+                      placeholder="Full Name *"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="form-col">
+                  <div class="input-group">
+                    <input
+                      type="email"
+                      name="cfEmail"
+                      placeholder="Email Address *"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="form-col">
+                  <div class="input-group">
+                    <input
+                      type="tel"
+                      name="cfPhone"
+                      placeholder="Phone Number *"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="form-col">
+                  <div class="input-group">
+                    <select name="cfSubject" required>
+                      <option value="">Choose an option</option>
+                      <option>Business Strategy</option>
+                      <option>Customer Experience</option>
+                      <option>Sustainability and ESG</option>
+                      <option>Training and Development</option>
+                      <option>IT Support & Maintenance</option>
+                      <option>Marketing Strategy</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="form-col full-width">
+                  <div class="input-group">
+                    <textarea
+                      name="cfMessage"
+                      placeholder="Type message *"
+                      required
+                    ></textarea>
+                  </div>
+                </div>
+                <div class="submit-wrapper">
+                  <button class="wrapper-btn">
+                    <h4>Send Message</h4>
+                    <span class="wtc">
+                      <i class="fa-solid fa-arrow-right"></i>
+                    </span>
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="six-text-cp container">
+      <div class="six-text-1">
+        <div class="six-heading">
+          <span class="six-subtitle">
+            <svg
+              class="wining-section-svg"
+              width="64px"
+              height="64px"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  d="M20.2083 7.82141L12.5083 12.2814C12.1983 12.4614 11.8083 12.4614 11.4883 12.2814L3.78826 7.82141C3.23826 7.50141 3.09826 6.75141 3.51826 6.28141C3.80826 5.95141 4.13826 5.68141 4.48826 5.49141L9.90826 2.49141C11.0683 1.84141 12.9483 1.84141 14.1083 2.49141L19.5283 5.49141C19.8783 5.68141 20.2083 5.96141 20.4983 6.28141C20.8983 6.75141 20.7583 7.50141 20.2083 7.82141Z"
+                  fill="currentColor"
+                ></path>
+                <path
+                  d="M11.4305 14.1389V20.9589C11.4305 21.7189 10.6605 22.2189 9.98047 21.8889C7.92047 20.8789 4.45047 18.9889 4.45047 18.9889C3.23047 18.2989 2.23047 16.5589 2.23047 15.1289V9.9689C2.23047 9.1789 3.06047 8.6789 3.74047 9.0689L10.9305 13.2389C11.2305 13.4289 11.4305 13.7689 11.4305 14.1389Z"
+                  fill="currentColor"
+                ></path>
+                <path
+                  d="M12.5703 14.1389V20.9589C12.5703 21.7189 13.3403 22.2189 14.0203 21.8889C16.0803 20.8789 19.5503 18.9889 19.5503 18.9889C20.7703 18.2989 21.7703 16.5589 21.7703 15.1289V9.9689C21.7703 9.1789 20.9403 8.6789 20.2603 9.0689L13.0703 13.2389C12.7703 13.4289 12.5703 13.7689 12.5703 14.1389Z"
+                  fill="currentColor"
+                ></path>
+              </g>
+            </svg>
+            Insights & Ideas
+          </span>
+          <h2 class="six-title">The Ultimate <span>Resource.</span></h2>
+        </div>
+      </div>
+      <div class="six-text-2">
+        <div class="six-text-container">
+          <div class="card-six">
+            <div class="card-six-img">
+              <img src="./img/blog-1.webp" alt="Innovation" />
+              <div class="six-img">
+                <h2>28</h2>
+                <p>FEB</p>
+              </div>
+            </div>
+            <div class="card-six-txt">
+              <div class="card-txt-flex">
+                <button>Bussines</button>
+                <p><span>By </span>Ellinien Loma</p>
+              </div>
+              <h4>Innovative Solutions for every<br>Business Success.</h4>
+              <div class="six-div-btn">
+                <h4>Learn More</h4>
+                <span class="error-arrow">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="card-six">
+            <div class="card-six-img">
+              <img src="./img/blog-2.webp" alt="Innovation" />
+              <div class="six-img">
+                <h2>28</h2>
+                <p>FEB</p>
+              </div>
+            </div>
+            <div class="card-six-txt">
+              <div class="card-txt-flex">
+                <button>Bussines</button>
+                <p><span>By </span>Ellinien Loma</p>
+              </div>
+              <h4>Harnessing Digital Transform a Roadmap Businesses.</h4>
+              <div class="six-div-btn">
+                <h4>Learn More</h4>
+                <span class="error-arrow">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="card-six">
+            <div class="card-six-img">
+              <img src="./img/blog-3.webp" alt="Innovation" />
+              <div class="six-img">
+                <h2>28</h2>
+                <p>FEB</p>
+              </div>
+            </div>
+            <div class="card-six-txt">
+              <div class="card-txt-flex">
+                <button>Bussines</button>
+                <p><span>By </span>Ellinien Loma</p>
+              </div>
+              <h4>Mastering Change Management Lessons for Businesses.</h4>
+              <div class="six-div-btn">
+                <h4>Learn More</h4>
+                <span class="error-arrow">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const modal = document.getElementById("myModal");
