--- a/index.html
+++ b/index.html
@@ -1593,7 +1593,7 @@
                 <button>Bussines</button>
                 <p><span>By </span>Ellinien Loma</p>
               </div>
-              <h4>Innovative Solutions for every<br>Business Success.</h4>
+              <h4>Innovative Solutions for every<br />Business Success.</h4>
               <div class="six-div-btn">
                 <h4>Learn More</h4>
                 <span class="error-arrow">
@@ -1649,6 +1649,138 @@
         </div>
       </div>
     </div>
+
+    <section class="cta-section container">
+      <div class="cta-container">
+        <div class="cta-text">
+          <h1>Let’s Build Future<br />Together.</h1>
+          <button class="cta-btn">
+            <h4>Send Message</h4>
+            <span class="wc">
+              <i class="fa-solid fa-arrow-right"></i>
+            </span>
+          </button>
+        </div>
+        <div class="cta-image">
+          <img src="./img/cta-bg.webp" alt="Two Businessmen Talking" />
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer container">
+      <div class="footer-container">
+        <!-- Left Column -->
+        <div class="footer-top">
+          <div class="footer-brand">
+            <div class="footer-logo">
+              <svg
+                class="wining-section-svg"
+                width="40px"
+                height="40px"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g
+                  id="SVGRepo_tracerCarrier"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></g>
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    d="M20.2083 7.82141L12.5083 12.2814C12.1983 12.4614 11.8083 12.4614 11.4883 12.2814L3.78826 7.82141C3.23826 7.50141 3.09826 6.75141 3.51826 6.28141C3.80826 5.95141 4.13826 5.68141 4.48826 5.49141L9.90826 2.49141C11.0683 1.84141 12.9483 1.84141 14.1083 2.49141L19.5283 5.49141C19.8783 5.68141 20.2083 5.96141 20.4983 6.28141C20.8983 6.75141 20.7583 7.50141 20.2083 7.82141Z"
+                    fill="currentColor"
+                  ></path>
+                  <path
+                    d="M11.4305 14.1389V20.9589C11.4305 21.7189 10.6605 22.2189 9.98047 21.8889C7.92047 20.8789 4.45047 18.9889 4.45047 18.9889C3.23047 18.2989 2.23047 16.5589 2.23047 15.1289V9.9689C2.23047 9.1789 3.06047 8.6789 3.74047 9.0689L10.9305 13.2389C11.2305 13.4289 11.4305 13.7689 11.4305 14.1389Z"
+                    fill="currentColor"
+                  ></path>
+                  <path
+                    d="M12.5703 14.1389V20.9589C12.5703 21.7189 13.3403 22.2189 14.0203 21.8889C16.0803 20.8789 19.5503 18.9889 19.5503 18.9889C20.7703 18.2989 21.7703 16.5589 21.7703 15.1289V9.9689C21.7703 9.1789 20.9403 8.6789 20.2603 9.0689L13.0703 13.2389C12.7703 13.4289 12.5703 13.7689 12.5703 14.1389Z"
+                    fill="currentColor"
+                  ></path>
+                </g>
+              </svg>
+              <h2>Bexon</h2>
+            </div>
+            <p>
+              Developing personalize our customer <br />journeys to increase
+              satisfaction & <br />loyalty of our expansion.
+            </p>
+            <div class="awards">
+              <div class="award">
+                <img src="./img/award-logo-1.webp" alt="" />
+              </div>
+              <div class="award">
+                <img src="./img/award-logo-2.webp" alt="" />
+              </div>
+            </div>
+          </div>
+
+          <!-- Services Column -->
+          <div class="footer-column">
+            <h3>Services</h3>
+            <ul>
+              <li>Customer Experience</li>
+              <li>Training Programs</li>
+              <li>Business Strategy</li>
+              <li>Training Program</li>
+              <li>ESG Consulting</li>
+              <li>Development Hub</li>
+            </ul>
+          </div>
+
+          <!-- Resources Column -->
+          <div class="footer-column">
+            <h3>Resources</h3>
+            <ul>
+              <li>Contact us</li>
+              <li>Team Member</li>
+              <li>Recognitions</li>
+              <li>Careers</li>
+              <li>News</li>
+              <li>Feedback</li>
+            </ul>
+          </div>
+
+          <!-- Newsletter -->
+          <div class="footer-newsletter">
+            <h2>Subscribe to Our <br />Newsletter.</h2>
+            <div class="newsletter-input">
+              <input type="email" placeholder="Enter email" />
+              <button type="submit">
+                <i class="fa-solid fa-paper-plane"></i>
+              </button>
+            </div>
+            <label class="terms">
+              <input type="checkbox" />
+              Agree to our <strong>Terms & Condition?</strong>
+            </label>
+          </div>
+        </div>
+
+        <div class="footer-bottom">
+          <div class="footer-bottom-left">
+            <div class="footer-bottom-left-contect">
+              <i class="fa-solid fa-phone fa-3x"></i>
+              <p>+1(009)544-7818</p>
+            </div>
+            <div class="footer-bottom-left-contect">
+             <i class="fa-solid fa-envelope fa-3x"></i>
+              <p>info@bxone,com</p>
+            </div>
+          </div>
+          <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-facebook-f fa-3x"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in fa-3x"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram fa-3x "></i></a>
+          </div>
+          <p>&copy; 2023 Bexon. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
