--- a/index.html
+++ b/index.html
@@ -337,31 +337,7 @@
         </h1>
         <div class="secand-1-bottom">
           <div class="animetion">
-            <svg
-              width="187px"
-              height="187px"
-              viewBox="-1.6 -1.6 19.20 19.20"
-              fill="currentColor"
-              xmlns="http://www.w3.org/2000/svg"
-              stroke="#000000"
-              stroke-width="0.00016"
-              transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)"
-            >
-              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-              <g
-                id="SVGRepo_tracerCarrier"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke="#CCCCCC"
-                stroke-width="0.096"
-              ></g>
-              <g id="SVGRepo_iconCarrier">
-                <path
-                  d="M14 2H5.50003L4.00003 3.5L6.83581 6.33579L0.585815 12.5858L3.41424 15.4142L9.66424 9.16421L12.5 12L14 10.5L14 2Z"
-                  fill="#000000"
-                ></path>
-              </g>
-            </svg>
+           <svg fill="#fff" height="187px" width="187px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" transform="matrix(1, 0, 0, -1, 0, 0)rotate(-45)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M328.227,304.385V0H183.773v304.385H48.385L256,512l207.615-207.615H328.227z M123.116,335.34h91.612V30.954h82.545 V335.34h91.612L256,468.224L123.116,335.34z"></path> </g> </g> </g></svg>
           </div>
           <p>
             Represents growth, expansion, and modern<br />
